[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools_scm",
  "wheel",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project]
name = "cc-plugin-glider"
description = "Compliance Checker Glider DAC plugin"
license = {text = "Apache-2.0"}
maintainers = [
    {name = "Robert Fratantonio", email="robert.fratantonio@rpsgroup.com"},
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]

[project.urls]
documentation = "http://ioos.github.io/compliance-checker/"
homepage = "https://github.com/ioos/cc-plugin-glider"
repository = "https://github.com/ioos/cc-plugin-glider"
[project.entry-points."compliance_checker.suites"]
"gliderdac" = "cc_plugin_glider.glider_dac:GliderCheck"
[tool.setuptools]
packages = ["cc_plugin_glider"]
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "cc_plugin_glider/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
lint.select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "F", # flakes
    "I", # import sorting
    "T20", # flake8-print
    "UP", # upgrade
]
target-version = "py38"
line-length = 79

[tool.pytest.ini_options]
filterwarnings = [
    "error:::cc-plugin-glider.*",
    "ignore::UserWarning",
    "ignore::RuntimeWarning",
]

[tool.check-manifest]
ignore = [
    "*.yml",
    ".coveragerc",
    "Makefile",
    "docs",
    "docs/*",
    "notebooks",
    "notebooks/*",
    "tests",
    "tests/*",
]
