[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm",
  "wheel",
]

[project]
name = "cc-plugin-glider"
description = "Compliance Checker Glider DAC plugin"
readme.content-type = "text/markdown"
readme.file = "README.md"
license = { text = "Apache-2.0" }
maintainers = [
  { name = "Benjamin Adams", email = "benjamin.adams@tetratech.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "dependencies",
  "version",
]

urls.documentation = "http://ioos.github.io/compliance-checker/"
urls.homepage = "https://github.com/ioos/cc-plugin-glider"
urls.repository = "https://github.com/ioos/cc-plugin-glider"
entry-points."compliance_checker.suites"."gliderdac" = "cc_plugin_glider.glider_dac:GliderCheck"

[tool.setuptools]
packages = [
  "cc_plugin_glider",
]
include-package-data = true
license-files = [
  "LICENSE.txt",
]

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "cc_plugin_glider/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
target-version = "py39"
line-length = 79

lint.select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "F",   # flakes
  "I",   # import sorting
  "T20", # flake8-print
  "UP",  # upgrade
]

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "Makefile",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.pytest.ini_options]
filterwarnings = [
  "error:::cc-plugin-glider.*",
  "ignore::UserWarning",
  "ignore::RuntimeWarning",
]
